<resources>
    <string name="app_name">Yaniv</string>
    <string name="menu_item_achievements">Achievements</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_new_game">New Game</string>
    <string name="menu_item_resume">Resume Game</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_tutorial">Tutorial</string>
    <string name="menu_item_reset_achievements">Reset Achievements</string>
    <string name="menu_item_reset_rating">Reset Rating</string>
    <string name="settings">Settings</string>
    <string name="title">YANIV</string>
    <string name="yaniv">YANIV!!</string>
    <string name="achievements">Achievements</string>
    <string name="speed_up">Speed Up</string>
    <string name="scores">Scores</string>
    <string name="next_round">Next Round</string>
    <string name="all_scores">All Scores</string>
    <string name="friends_scores">Scores of Friends</string>
    <string name="friends">Friends</string>
    <string name="followers">Followers</string>
    <string name="hand">Hand Value:</string>
    <string name="yaniv_at">Yaniv at</string>
    <string name="round">Round</string>
    <string name="target">Target:</string>
    <string name="heyzap_checkin">I just checked into Yaniv, free for Android. Come check it out!</string>
    <string name="no_scores">No scores to show.</string>
    <string name="app_version_info">1.7.3</string>
    <string name="copyright_info">Version %s\nCopyright © 2011/2 Barry Irvine. All Rights Reserved.</string>
    <string name="settings_name">Name:</string>
    <string name="settings_email">Email:</string>
    <string name="settings_num_players">Number of players:</string>
    <string name="settings_hint_name">Your name</string>
    <string name="settings_language">Language: </string>
    <string name="settings_publish">Publish Options</string>
    <string name="settings_checkbox_facebook">Allow publishing of achievements on Facebook</string>
    <string name="settings_checkbox_heyzap">Allow Heyzap check ins for achievements and ratings</string>
    <string name="settings_friend_email_label">Friends:</string>
    <string name="settings_button_friend_email">Add Friend</string>
    <string name="settings_friend_email_tip">Add a new friend by email</string>
    <string name="settings_friend_email">Enter email address of a friend:</string>
    <string name="settings_computer_speed">Computer Speed:</string>
    <string name="settings_personal_details">Personal Details</string>
    <string name="settings_general_settings">General Settings</string>
    <string name="settings_game_options">Game Options</string>
    <string name="settings_yaniv_minimum">Minimum points to call Yaniv:</string>
    <string name="settings_volume">Volume options:</string>
    <string name="settings_slow">SLOW</string>
    <string name="settings_fast">FAST</string>
    <string name="settings_avatar_prompt_camera">Take your picture to store as your avatar!</string>
    <string name="settings_avatar_prompt_gallery">Choose a picture to use as your avatar!</string>
    <string name="players_four">Four</string>
    <string name="players_three">Three</string>
    <string name="players_two">Two</string>
    <string name="progress_friends">Retrieving existing friends…</string>
    <string name="progress_friend_request">Updating friends…</string>
    <string name="exit_using_back_warning">Press back again to exit</string>
    <string name="alert_title_invalid_card">Invalid card</string>
    <string name="alert_title_invalid_cards">Invalid cards</string>
    <string name="alert_title_call_yaniv">Call Yaniv</string>
    <string name="alert_title_out">You\'re OUT!</string>
    <string name="alert_title_invalid_pile_card">Invalid pile card</string>
    <string name="alert_title_winner">Congratulations! You win.</string>
    <string name="alert_title_wrong_turn">Wrong turn</string>
    <string name="alert_title_achievement">You\'ve won an achievement</string>
    <string name="alert_title_reset_achievements">Reset Achievements</string>
    <string name="alert_title_reset_rating">Reset Rating</string>
    <string name="alert_title_send_email">Send Email</string>
    <string name="alert_title_language">Choose Language</string>
    <string name="alert_title_new_game">New Game</string>
    <string name="alert_title_players_out">Player(s) out</string>
    <string name="facebook_post">has won the %s achievement in Yaniv - a highly addictive card game for Android phones.</string>
    <string name="heyzap_achievement">I just won the %s achievement in Yaniv - free for Android!</string>
    <string name="heyzap_rating">I just got a rating of %d in Yaniv - free for Android!</string>
    <string name="game_url">https://market.android.com/details?id=com.bazsoft.yaniv</string>
    <string name="market_url">market://details?id=com.bazsoft.yaniv</string>
    <string name="rate_yaniv">Rate Yaniv</string>
    <string name="feedback">Feedback</string>
    <string name="alert_achievement">You\'ve won the %s achievement!</string>
    <string name="alert_invalid_cards">Please select a straight of 3 cards or more of the same suit or 1–4 cards of the same kind.</string>
    <string name="alert_new_game">If you quit your existing game now %d points will be deducted from your rating. Are you sure you wish to proceed?</string>
    <string name="alert_pickup_from_deck">Please pickup from the deck as instructed.</string>
    <string name="alert_pickup_from_pile">Please pickup from the pile as instructed.</string>
    <string name="alert_call_yaniv">Please press the Yaniv button as instructed.</string>
    <string name="alert_quick_hands_too_many">You can only drop the ONE card that you just picked up from the deck.</string>
    <string name="alert_quick_hands_wrong_card">You can only drop the last card you picked up from the deck.</string>
    <string name="alert_invalid_pile_card">You can only pick up cards from each end of a straight.</string>
    <string name="alert_tutorial_wrong_pile_card" formatted="false">Please select %s and pick up %s as requested.</string>
    <string name="alert_tutorial_wrong_deck_card">Please select %s and then click on the deck.</string>
    <string name="alert_reset_achievements">This will remove all your existing achievements. Are you sure you wish to proceed?</string>
    <string name="alert_reset_rating">This will reset your rating and remove your played and won statistics. Are you sure you wish to proceed?</string>
    <string name="alert_send_email">There is no one in the database with an email of %s. Either they have not installed Yaniv, have an older version or have not added their email address. Would you like to send them an email?</string>
    <string name="alert_wrong_turn">It is not your turn.</string>
    <string name="alert_deduct" formatted="false">%d points have been deducted from your rating. You now have a rating of %d.</string>
    <string name="alert_add" formatted="false">%d points have been added to your rating. You now have a rating of %d.</string>
    <string name="tutorial_01">First let\'s look at the different screen elements.</string>
    <string name="tutorial_07">Your objective is to get your card score down to FIVE points or fewer. Joker=0; Ace=1; J,Q,K=10; other cards=face value. E.g. Your hand is worth 39 points, your opponent has 28.</string>
    <string name="tutorial_08">You can drop multiple cards at the same time if they are the same kind or a straight of three cards or more of the same suit. You can use a Joker to replace a missing card in a straight.</string>
    <string name="tutorial_09">In this case your highest cards are the 2 Jacks. You can swap them for a visible pile card or an unknown card from the deck.</string>
    <string name="tutorial_10">The 7 on the pile isn\'t useful here: you don\'t have any 7\'s with which to make a pair next go and it doesn\'t help you make a straight.</string>
    <string name="tutorial_11">Please click on both Jacks and then click on the deck to pick up a card from there.</string>
    <string name="tutorial_13">It\'s now the computer\'s turn. The Jacks you just dropped aren\'t useful to him so he\'ll drop the two Kings and also pick up from the deck.</string>
    <string name="tutorial_15">You could keep your 8♥ and 10♥ hoping to get a 9♥ or a Joker but that seems a remote possibility. Let\'s drop the 10♥ and pick up from the deck.</string>
    <string name="tutorial_17">That was lucky! You\'ve picked up another 10 from the deck. You can quickly whack it down on the pile before the next player goes.</string>
    <string name="privacy_button">Privacy Policy</string>
    <string name="privacy_subtitle_1">Phone Identity</string>
    <string name="privacy_opening">Barry Irvine (henceforth referred to as \"The Developer\") is keenly aware of concerns with regards to the personal data of the individual downloading and playing the Yaniv Android game (henceforth referred to as \"The Player\") and, in order to inform players as to how personal data is used within the game and the accompanying web services, has set out the following privacy policy. All sensitive personal data passed from your device to the web services will be encrypted.</string>
    <string name="privacy_text_1">The unique IMEI of The Player\'s device is used to generate an id for use with the web services. This information is encrypted in one direction (from the device to the web service) before being stored and it should not be possible for anyone (including The Developer) to decrypt this data.</string>
    <string name="privacy_subtitle_2">Email Address</string>
    <string name="privacy_text_2">The email address provided by The Player in the settings screen is solely used to allow your friends to search for you within the online score tables. This data is encrypted in one direction (from the device to the web service) before being stored. The Developer cannot view the actual email address and, in any case, would never use your email address to send unsolicited emails or pass this information on to third parties.</string>
    <string name="privacy_subtitle_3">Facebook Identity</string>
    <string name="privacy_text_3">The Facebook login is currently only used to write a notification to the wall of The Player when The Player opts to publish an achievement. The Player will always be given an option as to whether to post this information or not. The Developer maintains the policy of always seeking confirmation from The Player before anything is submitted to Facebook. The Facebook access token is only stored on The Player\'s device and only accessible to the Yaniv program whilst it is running.</string>
    <string name="privacy_subtitle_4">Avatar Picture</string>
    <string name="privacy_text_4">The avatar picture stored within the settings screen is used to display the image of The Player on the various scoreboards within the game. Players are advised that the use of indecent or copyrighted images is not permitted and could result in the removal of online functionality within the game.</string>
    <string name="privacy_subtitle_5">Contact Details</string>
    <string name="privacy_text_5">Your contact details are only used to populate the drop-down list on the add friend screen to assist in entering an email address.</string>
    <string name="privacy_closing">The contents of this privacy policy are subject to change with future developments. If anything is unclear or you have further concerns regarding the privacy policy please do not hesitate to contact The Developer: yaniv.bazsoft@gmail.com</string>
    <string name="content_description_avatar">Image representing a player\'s avatar</string>
    <string name="content_description_expander">Opens a new window</string>
    <string name="five">5</string>
    <string name="seven">7</string>
</resources>